[project]
name = "python-lib-dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.2",
    "fastapi[all]>=0.124.4",
    "orjson>=3.11.5",
    "pytest>=9.0.2",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
    "structlog>=25.5.0",
]
# pytest 경로
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
